[project]
name = "mcp-server-toolhouse"
version = "0.1.0"
description = "All the high-quality toolhouse tools in one place, accessible as one MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "mcp>=1.1.1",
 "openai>=1.57.1",
 "toolhouse>=1.3.0",
]
[[project.authors]]
name = "orliesaurus"
email = "orlando@toolhouse.ai"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-toolhouse = "mcp_server_toolhouse:main"
